package br.unitins.tp1.xadrez.e.comerce.model;

public enum PagamentoStatus {
    PENDENTE,
    AUTORIZADO,
    RECUSADO,
    ESTORNADO
}
