package br.unitins.tp1.xadrez.e.comerce.model;

public enum PedidoStatus {
    AGUARDANDO_PAGAMENTO,
    PAGO,
    ENVIADO_PARA_ENTREGA,
    ENTREGUE,
    CANCELADO
}
