package br.unitins.tp1.xadrez.e.comerce.model;

public enum TipoCupomDesconto {
    FIXO,
    PERCENTUAL,
    FRETEGRATIS
}