@startuml EComerce

class DefaultEntity {
  - id: Long
  - dataCadastro: Date
  - dataAtualizacao: Date
}

class Usuario {
  - email: String
  - keycloakid: String
  - nome: String
  - telefone: String
  - cpf: String
  - cadastroCompleto: boolean
}

class Endereco {
  - rua: String
  - numero: String
  - complemento: String
  - cep: String
  - cidade: String
  - estado: String
  - pais: String
}

class ListaDesejos {
}

class Pedido {
  - status: PedidoStatus
  - subtotal: BigDecimal
  - desconto: BigDecimal
  - frete: BigDecimal
  - taxas: BigDecimal
  - valorTotal: BigDecimal
}

enum PedidoStatus {
  AGUARDANDO_PAGAMENTO
  PAGO
  ENVIADO_PARA_ENTREGA
  ENTREGUE
  CANCELADO
}

class EnderecoPedido {
  - rua: String
  - numero: String
  - complemento: String
  - cep: String
  - cidade: String
  - estado: String
  - pais: String
}

enum PagamentoStatus {
  PENDENTE
  AUTORIZADO
  RECUSADO
  ESTORNADO
}

abstract class Pagamento {
  - status: PagamentoStatus
  - identificadorTransacao: String
  - valor: BigDecimal
  - dataConfirmacao: Date
}

class PagamentoPix {
  - chavePix: String
}

class PagamentoCartaoCredito {
  - bandeira: String
  - parcelas: int
  - nomeTitular: String
  - ultimosDigitos: String
}

class PagamentoCartaoDebito {
  - banco: String
  - nomeTitular: String
  - ultimosDigitos: String
}

class PagamentoBoleto {
  - linhaDigitavel: String
  - dataVencimento: Date
}

PagamentoPix --|> Pagamento
PagamentoCartaoCredito --|> Pagamento
PagamentoCartaoDebito --|> Pagamento
PagamentoBoleto --|> Pagamento

class PedidoItem {
  - quantidade: int
  - precoUnitario: BigDecimal
}

class JogoXadrez {
  - nome: String
  - preco: BigDecimal
  - descricao: String
  <<adminOnly>>
  - estoqueDisponivel: int
  - custoProducao: BigDecimal
}

class CupomDesconto {
  - codigo: String
  - dataValidade: Date
  - ativo: boolean
  - usoMaximo: Integer
  - usosRealizados: Integer
  - porUsuario: boolean
  - tipo: TipoCupomDesconto
  - valor: BigDecimal
}

enum TipoCupomDesconto {
  FIXO
  PERCENTUAL
  FRETEGRATIS
}

' --- CORREÇÕES DE RELACIONAMENTOS E CARDINALIDADES ---

Usuario "1" *--> "*" Endereco 
Usuario "1" *--> "1" ListaDesejos 
Usuario "1" --> "*" Pedido 

' Ajustado para Muitos-para-Muitos:
ListaDesejos "*" o--> "*" JogoXadrez 

Pedido "1" *--> "*" PedidoItem 
PedidoItem "*" --> "1" JogoXadrez 
Pedido "1" *--> "1" EnderecoPedido 
Pedido "1" *--> "1" Pagamento 

' Ajustado: Muitos pedidos podem usar 1 cupom:
Pedido "*" --> "0..1" CupomDesconto 

' Ajustado: Muitos pedidos/pagamentos podem ter o mesmo status/método:
Pedido "*" --> "1" PedidoStatus 
Pagamento "*" --> "1" PagamentoStatus 
CupomDesconto "*" --> "1" TipoCupomDesconto 

note bottom of DefaultEntity
  Todas as classes herdam
  de DefaultEntity
end note

note top of Usuario
  O login é delegado ao Keycloak.
  cadastroCompleto indica se o cliente já pode comprar.
end note

note bottom of EnderecoPedido
  Value object embutido no pedido.
  Ele guarda a cópia do endereço no momento da compra.
  Se o usuário apagar o endereço salvo, o pedido não é afetado.
end note

note bottom of JogoXadrez
  O catálogo de produtos fica no diagrama de classes.
  Este diagrama mostra apenas interação do usuário com a compra.
end note

note bottom of CupomDesconto
  O desconto é aplicado no pedido, não no produto.
  O tipo do cupom é definido por um enum.
  O valor fica armazenado no próprio cupom.
end note

@enduml